trying to modify system classes